<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".publicaciones">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="912dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="386dp"
            android:layout_height="82dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView26"
                android:layout_width="171dp"
                android:layout_height="46dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/inacap_logo" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="164dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="23dp"
                android:onClick="ainicio"
                android:text="volver"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView26"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout15"
            android:layout_width="387dp"
            android:layout_height="745dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="56dp"
            android:background="@color/grisito"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout14"
                android:layout_width="392dp"
                android:layout_height="89dp"
                android:layout_marginBottom="13dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView19"
                    android:layout_width="92dp"
                    android:layout_height="85dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/fotoperfil" />

                <TextView
                    android:id="@+id/textView38"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="49dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="145dp"
                    android:text="@string/usuario"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.341"
                    app:layout_constraintStart_toEndOf="@+id/imageView19"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView39"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="53dp"
                    android:text="@string/correo"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView38"
                    app:layout_constraintTop_toBottomOf="@+id/textView38" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout16"
                android:layout_width="387dp"
                android:layout_height="644dp"
                android:layout_marginTop="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout14">

                <TextView
                    android:id="@+id/textView40"
                    android:layout_width="298dp"
                    android:layout_height="82dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="29dp"
                    android:layout_marginEnd="73dp"
                    android:text="@string/titulopub"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView41"
                    android:layout_width="334dp"
                    android:layout_height="78dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="37dp"
                    android:text="@string/textopubli"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView40" />

                <TextView
                    android:id="@+id/textView42"
                    android:layout_width="70dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="392dp"
                    android:text="@string/avisos"
                    android:textColor="@color/primary"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/textView41"
                    app:layout_constraintTop_toBottomOf="@+id/textView41" />

                <TextView
                    android:id="@+id/textView43"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/tiempopubli"
                    android:textColor="@color/accent"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView42"
                    app:layout_constraintTop_toBottomOf="@+id/textView42" />

                <ImageView
                    android:id="@+id/imageView23"
                    android:layout_width="116dp"
                    android:layout_height="96dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/res2" />

                <ImageView
                    android:id="@+id/imageView24"
                    android:layout_width="39dp"
                    android:layout_height="36dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView23"
                    app:layout_constraintEnd_toStartOf="@+id/imageView23"
                    app:srcCompat="@drawable/reporte" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>